--- a/public/ldu-landscape.css
+++ b/public/ldu-landscape.css
@@ -4,6 +4,64 @@ body {
     padding: 0 !important;
 }
 
+div.layer1 {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: 0;
+    width: 100%;
+    height: 100vh;
+    background-image: url(images/wand.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 1;
+}
+
+div.layer2{
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: 0;
+    width: 100%;
+    height: calc(80vh - 36px);
+    background-image: url(images/sofa.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    z-index: 20;
+}
+
+div.layer3{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: 0;
+    width: 100%;
+    height: calc(80vh - 36px);
+    background-image: url(images/kissen-mit-ei.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    z-index: 30;
+}
+
+div.layer4 {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+    z-index: 32;
+}
+
 #game {
     left: 0;
     right: 0;
@@ -12,8 +70,10 @@ body {
     margin: 0;
     width: 100%;
     height: 100vh;
-    background-color: #000000;
     color: #DDDDDD;
+    background-image: url(images/wand.png);
+    background-repeat:no-repeat;
+    background-size:cover;
 }
 
 #mainarea {
@@ -25,10 +85,23 @@ body {
     margin: 0;
     width: 100%;
     height: calc(80vh - 36px);
+    z-index: 40;
+}
+
+#moviearea {
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
 }
 
 #task {
-  width: 90%
+  width: 90%;
+  font-size: 1.5em;
 }
 
 .panel {
@@ -131,6 +204,11 @@ footer {
   flex-direction: row;
 }
 
+.group {
+  position: relative;
+  top: -30;
+}
+
 .group:after {
   content: "";
   display: table;
@@ -145,10 +223,16 @@ footer {
   float: right;
 }
 
+div {
+  font-family: sans-serif;
+}
+
 div.leftcol {
+  position: absolute;
   float: left;
   width: 100%;
 }
+
 div.rightcol {
   float: left;
   width: 33%;
@@ -177,3 +261,187 @@ div.rightcol {
   text-align: left;
   width: 30vw;
 }
+#Loading {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  background-image: url(images/loading.jpg);
+  background-size:cover;
+  z-index:60;
+}
+#ContinueGame {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  background-size:cover;
+  z-index:55;
+}
+
+.Dialog {
+  position: absolute;
+  width: 80%;
+  right: 10%;
+  top: 10vh;
+  height: 80vh;
+  background-color: rgba(255,255,255,0.9);
+  display: none; 
+  border:1px ridge #999999;
+  -webkit-border-radius: 20px 20px 20px 20px;
+  -moz-border-radius: 20px 20px 20px 20px;
+  border-radius: 20px 20px 20px 20px;
+   -webkit-box-shadow: inset 0px -1px 10px -1px rgba(0,0,0,0.5);
+   -moz-box-shadow: inset 0px -1px 10px -1px rgba(0,0,0,0.5);
+   box-shadow: inset 0px -1px 10px -1px rgba(0,0,0,0.5);
+}
+
+.Dialog:before{
+   content: "";
+   position: absolute;
+   top: 15px;
+   left: 15px;
+   right: 15px;
+   bottom: 15px;
+   border: 1px solid #999999;
+   background: rgba(255,255,255,0.25);
+   -webkit-border-radius: 20px 20px 20px 20px;
+   -moz-border-radius: 20px 20px 20px 20px;
+   border-radius: 20px 20px 20px 20px;
+   -webkit-box-shadow: 0px -1px 10px -1px rgba(0,0,0,0.5);
+   -moz-box-shadow: 0px -1px 10px -1px rgba(0,0,0,0.5);
+   box-shadow: 0px -1px 10px -1px rgba(0,0,0,0.5);
+}
+#LevelDone {
+   z-index: 50;
+}
+
+#LevelFailed {
+   z-index: 50;
+}
+
+#SelectPlayer {
+  position: absolute;
+  width: 80%;
+  right: 10%;
+  top: 10vh;
+  height: 80vh;
+  display: none;
+  background-color: rgba(0,0,0,0.7);
+  border:1px ridge #999999;
+  -webkit-border-radius: 20px 20px 20px 20px;
+  -moz-border-radius: 20px 20px 20px 20px;
+  border-radius: 20px 20px 20px 20px;
+   -webkit-box-shadow: inset 0px -1px 10px -1px rgba(0,0,0,0.5);
+   -moz-box-shadow: inset 0px -1px 10px -1px rgba(0,0,0,0.5);
+   box-shadow: inset 0px -1px 10px -1px rgba(0,0,0,0.5);
+   z-index: 50;
+}
+
+#SelectPlayer :before {
+   content: "";
+   position: absolute;
+   top: 15px;
+   left: 15px;
+   right: 15px;
+   bottom: 15px;
+   border: 1px solid #999999;
+   background: rgba(0,0,0,0.25);
+   -webkit-border-radius: 20px 20px 20px 20px;
+   -moz-border-radius: 20px 20px 20px 20px;
+   border-radius: 20px 20px 20px 20px;
+   -webkit-box-shadow: 0px -1px 10px -1px rgba(0,0,0,0.5);
+   -moz-box-shadow: 0px -1px 10px -1px rgba(0,0,0,0.5);
+   box-shadow: 0px -1px 10px -1px rgba(0,0,0,0.5);
+}
+
+#WorldCompleted {
+   z-index: 60;
+}
+
+#AllCompleted {
+   z-index: 60;
+}
+
+h2#AllCompletedText {
+    padding-top: 50px;
+}
+ul {
+  list-style-type: none;
+  line-height: 1.5em;
+  margin: 15vh;
+  font-size: 200%
+}
+li {
+  padding: 0.3em;
+  padding-top:0.7em;
+  text-align:center;
+}
+li div {
+  height: 30vh;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+  border-radius: 0.2em;
+  box-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  color: white;
+}
+
+li div.weiter {
+  background-color: #6b0;
+}
+
+li div.neu {
+  background-color: #c00;
+}
+
+.zentriert {
+position: relative;
+margin: 0;
+top: 50%;
+-webkit-transform: translateY(-50%);
+-ms-transform: translateY(-50%);
+transform: translateY(-50%);
+}
+
+.success {
+  @keyframes textwelle {
+    0 {
+      font-size: 0;
+      opacity: 0;
+      }
+    90% {
+      font-size: 220%;
+      opacity: 1;
+      }
+    100% {
+      font-size: 200%;
+      opacity: 1;
+      }
+  }
+  animation: textwelle 2s;
+  animation-play-state: paused;
+  text-align: center;
+  margin: auto; 
+}
+
+.dialogImage {
+  display: block;
+  margin: 0 auto;
+  opacity: 1;
+}
+
+@keyframes play {
+   100% { background-position: -1900px; }
+}
+.monster {
+  width: 240px;
+  height: 240px;
+  background: url('images/worldcompleted.png') left center;
+  animation: play 0,7s steps (14);
+  animation-duration: 4s; /* or: Xms */
+  animation-iteration-count: 10;
+  animation-direction: alternate; /* or: normal */
+}
+
+
