--- a/public/ldu-landscape.css
+++ b/public/ldu-landscape.css
@@ -319,6 +319,7 @@ div.rightcol {
   background-size:cover;
   z-index:60;
 }
+
 #ContinueGame {
   position: absolute;
   width: 100%;
@@ -326,6 +327,24 @@ div.rightcol {
   background-color: #000000;
   background-size:cover;
   z-index:55;
+}
+
+#SelectKlasse {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  background-size:cover;
+  z-index:50;
+}
+
+#SelectKlasse h1{
+  position: absolute;
+  width: 100%;
+  top: 1vh;
+  color: #dddddd;
+  text-align: center;
+  margin-top: 10vh;
 }
 
 .Dialog {
